feat: criação de pedido, tratamento de exceções, validações de requests e code cleanup